<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.uncc.sense49.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_alerts"
        android:name="edu.uncc.sense49.ui.alerts.AlertsFragment"
        android:label="@string/menu_alerts"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/nav_sensors"
        android:name="edu.uncc.sense49.ui.sensors.SensorsFragment"
        android:label="@string/menu_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/nav_account"
        android:name="edu.uncc.sense49.ui.account.AccountFragment"
        android:label="@string/menu_account_settings"
        tools:layout="@layout/fragment_account" />
</navigation>